# jwhisper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pom.xml
.sonarlint/: connectedMode.json
docker/: docker-compose.yaml
src/main/java/io/github/antoniomayk/jwhisper/: JWhisper.java  Jwhisper.java
src/main/java/io/github/antoniomayk/jwhisper/exceptions/: WhisperFullException.java
src/main/java/io/github/antoniomayk/jwhisper/jni/: Cpointer.java  WhisperContext.java  WhisperContextParams.java  WhisperCpp.java  WhisperFullParams.java
src/main/java/io/github/antoniomayk/jwhisper/utils/: AudioUtils.java  LibraryUtils.java  ResourceLoaderUtils.java
src/main/native/: CMakeLists.txt
src/main/native/jni/: io_github_antoniomayk_jwhisper_jni_WhisperCpp.c  io_github_antoniomayk_jwhisper_jni_WhisperCpp.cpp  io_github_antoniomayk_jwhisper_jni_WhisperCpp.h
src/main/native/src/: main.c
src/test/java/io/github/antoniomayk/jwhisper/: JwhisperTest.java
src/test/java/io/github/antoniomayk/jwhisper/jni/: CpointerTest.java  WhisperCppTest.java
src/test/java/io/github/antoniomayk/jwhisper/utils/: AudioUtilsTest.java  LibraryUtilsTest.java  ResourceLoaderUtilsTest.java
